chore: break anchors to prevent overflow
Refs: RW-731

--- a/html/themes/custom/common_design_subtheme/components/rw-opportunities/rw-opportunities.css
+++ b/html/themes/custom/common_design_subtheme/components/rw-opportunities/rw-opportunities.css
@@ -74,3 +74,8 @@
   padding-left: 8px;
   border-left: 8px solid var(--cd-reliefweb-brand-blue);
 }
+
+/* Ensure long URLs in WYSIWYG wrap */
+.rw-how-to-apply a {
+  word-break: break-all;
+}
